# domain-driven-design-katas

./: .gitignore  Makefile  pyproject.toml
src/sync_dirs/: main.py  readme.md
tests/test_sync_dirs/: test_sync.py
